--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = ['yfinance',
+'ollama'
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+]
